src/assets/css/style.css
/* ... */
.nissan-background {
	background-image: url('../images/nissan-car.png');
	background-size: 80%;
	background-repeat: no-repeat;
	background-position: center center;
	height: 150px;
	padding: 0 20px;
	box-sizing: border-box;
}

.service {
	padding-bottom: 175px;
}

.service.signature-mode {
	padding-bottom: 275px;
}

.accept-estimate-component {
	position: fixed;
	min-width: 320px;
	width: 100%;
	bottom: 0;
	z-index: 3;
	background-color:white;
}

@media (min-width: 768px) {
	.accept-estimate-component {
		max-width: 75%;
	}
	.help-screen-overlay {
		max-width: 75%;
		left: 50%;
    	transform: translateX(-50%);
	}
}

.signature-component {
	text-align: center;
	background-color:white;
	position: fixed;
	min-width: 320px;
	width: 100%;
	bottom: 0;
	z-index: 3;
}

@media (min-width: 768px) {
	.signature-component {
		max-width: 75%;
	}
}

.inspection {
	padding-bottom: 100px;
}

.proceed-component {
	position: fixed;
	min-width: 320px;
	width: 100%;
	bottom: 0;
	z-index: 3;
	background-color: #f5f5f5;
}

@media (min-width: 768px) {
	.proceed-component {
		max-width: 75%;
	}
}

.thanks-confirm-text {
	padding: 10px 20px 0px 20px;
}

.css-checkbox {
	position: relative;
	width: 260px;
    margin: 15px auto;
}
.css-checkbox input {
	visibility: hidden;
	position: absolute;
}
.css-checkbox label {
	display: block;
	cursor: pointer;
	padding-left: 30px;
	font-size: 11px;
	font-weight: 600;
}
.css-checkbox label a {
	color: -webkit-link;
	cursor: pointer;
	text-decoration: underline;
}
.css-checkbox label > .box {
	display: block;
	position: absolute;
	left: 0;
	top: 0;
	z-index: 5;
	border: 1px solid #888;
	border-radius: 2px;
	height: 15px;
	width: 15px;
	-webkit-transition-duration: .3s;
    -moz-transition-duration: .3s;
    transition-duration: .3s;
    -webkit-transition-delay: .2s;
    -moz-transition-delay: .2s;
    transition-delay: .2s;
}

.css-checkbox input[type=checkbox]:checked~label>.box {
	opacity: 0;
    -webkit-transform: scale(0) rotate(-180deg);
    -moz-transform: scale(0) rotate(-180deg);
    transform: scale(0) rotate(-180deg);
}
.css-checkbox label > .check {
	display: block;
    position: absolute;
    -webkit-transition-duration: .3s;
    -moz-transition-duration: .3s;
    transition-duration: .3s;
    top: -3px;
    left: 6px;
    width: 7px;
    height: 15px;
    border: 1px solid #666;
    border-top: none;
    border-left: none;
    opacity: 0;
    z-index: 5;
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    transform: rotate(180deg);
    -webkit-transition-delay: .3s;
    -moz-transition-delay: .3s;
    transition-delay: .3s;
}

.css-checkbox input[type=checkbox]:checked~label>.check {
	opacity: 1;
    -webkit-transform: scale(1) rotate(45deg);
    -moz-transform: scale(1) rotate(45deg);
    transform: scale(1) rotate(45deg);
}

.terms-and-conditions {
	background-color: #fff;
    width: 100%;
    min-height: 100vh;
    border-bottom: 20px solid white;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 10;
    padding: 25px;
}
.terms-and-conditions .close-btn {
	float: right;
	width: 19px;
	height: 19px;
	background-image: url('../images/close-button.png');
	background-size: 17px 17px;
	cursor: pointer;
	position: absolute;
    top: 38px;
    right: 25px;
    border: 1px solid #fff;
    border-radius: 50%;
    box-shadow: 0px 3px 6px #666;
}
.terms-header {
	font-size: 10px;
	margin: 15px 0 30px;
}
.terms-body {
	text-align: left;
	font-size: 11px;
	margin-top: 25px;
}
.terms-body > h3 {
	text-transform: uppercase;
}
.terms-close {
	margin-top: 25px;
}
.terms-close-btn {
	font-size: 18px;
	font-weight: 700;
	color: #266797;
	padding: 5px 0;
	text-transform: uppercase;
	background-color: #bae4ff;
	cursor: pointer;
}

.terms-close-btn:hover {
	background-color: #aad4ef;
}

.info-modal .info-modal-image {
	width: 100%;
	height: 200px;
	background-size: cover;
}
.info-modal-info-top {
	background-color: #fff;
}
.info-modal-info-top .green-bg {
	padding: 5px 15px;
	background-color: rgba(69, 172, 0, 0.3);
}
.info-modal-info-top .grey-bg {
	padding: 5px 15px;
	background-color: rgba(102, 102, 102, 1);
	color: #fff;
}
.info-modal-info-top h2 {
	margin: 5px 0 0;
	font-size: 18px;
}
.info-modal-info-top p {
	font-size: 14px;
}
.info-modal-info-top > p {
	padding: 15px;
}

.info-modal-concerns {
	width: 100%;
	padding: 10px;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	font-size: 14px;
}
.info-modal-concerns .customer-comments-label,
.info-modal-concerns .advisor-comments-label {
	font-weight: bold;
	margin: 5px 0;
	text-transform: uppercase;
}
.info-modal-concerns .customer-comments,
.info-modal-concerns .advisor-comments {
	margin: 5px 0;
	text-align: start;
	word-break: break-word;
}

.info-modal-info-bottom {
	background-color: #f5f5f5;
	padding: 5px;
}
.info-modal-info-bottom .info-modal-contact .contact-icon, .info-modal-info-bottom .info-modal-contact .chat-icon, .info-modal-info-bottom .info-modal-contact .inspection-summary-link {
	float: none;
}
.info-modal-info-bottom .info-modal-contact .inspection-summary-link {
	font-size: 10px;
	margin-right: 4px;
}
.info-modal-info-bottom .info-modal-contact .contact-icon, .info-modal-info-bottom .info-modal-contact .chat-icon {
	width: 20px;
	height: 20px;
	margin-left: 2px;
}
.info-modal-estimate {
	margin: 10px 0 5px;
	font-size: 10px;
	font-weight: bold;
}
.info-modal-estimate > span {
	color: #00578e;
	font-size: 16px;
	vertical-align: middle;
	margin-left: 15px;
}
.modal-list-options {
	margin-left: 0;
	list-style-type: none;
	margin-top: 25px;
}
.modal-list-options > li {
	border-top: 1px solid #f5f5f5;
	padding: 10px;
	cursor: pointer;
}
.modal-list-options > li a {
	color: #00578e;
	text-decoration: none;
}
.modal-list-phone {
	border-top: 1px solid #f5f5f5;
	padding: 10px;
}
.modal-message.no-padding-bottom {
	padding-bottom: 0;
}
.modal-message.no-padding-top {
	padding-top: 0;
}
.modal-message.no-padding-top ul {
	margin-top: 0;
}
/* ... */

